# niar

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Camera.cpp  Camera.hpp  Compute.cpp  Compute.hpp  GL.cpp  GL.hpp  GrassField.cpp  GrassField.hpp  Jamfile  Program.cpp  Program.hpp  README.md  config.ini  data_path.cpp  data_path.hpp  gl_errors.hpp  glcorearb.h  lib.h  main.cpp  make-GL.py  report_sketch.md  utils.cpp  utils.hpp
.ccls-cache/@@Users@duwei@Documents@playground@sdl-empt/: @Users@duwei@.vim@LSP@ccls@clang+llvm-8.0.0-x86_64-apple-darwin@lib@clang@8.0.0@include@__stddef_max_align_t.h.blob  @Users@duwei@.vim@LSP@ccls@clang+llvm-8.0.0-x86_64-apple-darwin@lib@clang@8.0.0@include@emmintrin.h.blob  @Users@duwei@.vim@LSP@ccls@clang+llvm-8.0.0-x86_64-apple-darwin@lib@clang@8.0.0@include@float.h.blob  @Users@duwei@.vim@LSP@ccls@clang+llvm-8.0.0-x86_64-apple-darwin@lib@clang@8.0.0@include@inttypes.h.blob  @Users@duwei@.vim@LSP@ccls@clang+llvm-8.0.0-x86_64-apple-darwin@lib@clang@8.0.0@include@limits.h.blob  @Users@duwei@.vim@LSP@ccls@clang+llvm-8.0.0-x86_64-apple-darwin@lib@clang@8.0.0@include@mm_malloc.h.blob  @Users@duwei@.vim@LSP@ccls@clang+llvm-8.0.0-x86_64-apple-darwin@lib@clang@8.0.0@include@mmintrin.h.blob  @Users@duwei@.vim@LSP@ccls@clang+llvm-8.0.0-x86_64-apple-darwin@lib@clang@8.0.0@include@pmmintrin.h.blob  @Users@duwei@.vim@LSP@ccls@clang+llvm-8.0.0-x86_64-apple-darwin@lib@clang@8.0.0@include@stdarg.h.blob  @Users@duwei@.vim@LSP@ccls@clang+llvm-8.0.0-x86_64-apple-darwin@lib@clang@8.0.0@include@stddef.h.blob  @Users@duwei@.vim@LSP@ccls@clang+llvm-8.0.0-x86_64-apple-darwin@lib@clang@8.0.0@include@stdint.h.blob  @Users@duwei@.vim@LSP@ccls@clang+llvm-8.0.0-x86_64-apple-darwin@lib@clang@8.0.0@include@xmmintrin.h.blob
.ccls-cache/@Users@duwei@Documents@playground@sdl-empt/: include@SDL2@SDL.h.blob  include@SDL2@SDL_assert.h.blob  include@SDL2@SDL_atomic.h.blob  include@SDL2@SDL_audio.h.blob  include@SDL2@SDL_blendmode.h.blob  include@SDL2@SDL_clipboard.h.blob  include@SDL2@SDL_config.h.blob  include@SDL2@SDL_config_macosx.h.blob  include@SDL2@SDL_cpuinfo.h.blob  include@SDL2@SDL_endian.h.blob  include@SDL2@SDL_error.h.blob  include@SDL2@SDL_events.h.blob  include@SDL2@SDL_filesystem.h.blob  include@SDL2@SDL_gamecontroller.h.blob  include@SDL2@SDL_gesture.h.blob  include@SDL2@SDL_haptic.h.blob  include@SDL2@SDL_hints.h.blob  include@SDL2@SDL_joystick.h.blob  include@SDL2@SDL_keyboard.h.blob  include@SDL2@SDL_keycode.h.blob  include@SDL2@SDL_loadso.h.blob  include@SDL2@SDL_log.h.blob  include@SDL2@SDL_main.h.blob  include@SDL2@SDL_messagebox.h.blob  include@SDL2@SDL_mouse.h.blob  include@SDL2@SDL_mutex.h.blob  include@SDL2@SDL_pixels.h.blob  include@SDL2@SDL_platform.h.blob  include@SDL2@SDL_power.h.blob  include@SDL2@SDL_quit.h.blob  include@SDL2@SDL_rect.h.blob  include@SDL2@SDL_render.h.blob  include@SDL2@SDL_rwops.h.blob  include@SDL2@SDL_scancode.h.blob  include@SDL2@SDL_sensor.h.blob  include@SDL2@SDL_shape.h.blob  include@SDL2@SDL_stdinc.h.blob  include@SDL2@SDL_surface.h.blob  include@SDL2@SDL_system.h.blob  include@SDL2@SDL_thread.h.blob  (+476 more)
DerivedData/ModuleCache.noindex/: Session.modulevalidation
DerivedData/sdl-empty/: info.plist
config/: assets.ini  assets_extra.ini  global.ini  pathtracer.ini  skyAtmosphere.ini
include/SDL2/: SDL.h  SDL_audio.h  SDL_config.h  SDL_config.h.cmake  SDL_config.h.in  SDL_config_android.h  SDL_config_iphoneos.h  SDL_config_macosx.h  SDL_config_minimal.h  SDL_config_os2.h  SDL_config_pandora.h  SDL_config_psp.h  SDL_config_windows.h  SDL_config_winrt.h  SDL_config_wiz.h  SDL_copying.h  SDL_cpuinfo.h  SDL_events.h  SDL_gamecontroller.h  SDL_haptic.h  SDL_hints.h  SDL_joystick.h  SDL_revision.h  SDL_sensor.h  SDL_stdinc.h  SDL_surface.h  SDL_system.h  SDL_syswm.h  SDL_thread.h  SDL_version.h  SDL_video.h  SDL_vulkan.h
include/VulkanMemoryAllocator/: vk_mem_alloc.h
include/assimp/: config.h  config.h.in  material.h
include/glew/: eglew.h  glew.h  (+2 more)
lib/: IrrXMLd.lib  libconfig++.lib  libconfig++d.lib  libvulkan.1.2.154.dylib  zlibstaticd.lib
media/: 16planes.fbx  auto_exp.glb  auto_export.glb  blob.dae  blueCube.fbx  blueCube_bin.fbx  box.dae  camera_only.fbx  cornell2.glb  cornell_box.dae  cornell_box.fbx  cornell_box.mb  cornell_box_gltf.blend  cornell_empty.fbx  cornell_empty_2.fbx  cornell_light.dae  cornell_light.fbx  cornell_small.dae  cornell_small_light.dae  cube.fbx  empty.blend  longcube.fbx  plane.fbx  poly_sphere.fbx  poly_sphere0.fbx  poly_sphere1.fbx  prism.dae  prism.fbx  prism2.dae  prism_1.fbx  prism_2.fbx  redCube.fbx  sparrow.blend  sparrow.glb  test_export.mb  torus.fbx  translucent.blend  translucent.glb  water_tower.blend  window.glb  (+5 more)
scripts/: blender_tools.py  compile_vulkan_shaders.sh
sdl-empt.xcodeproj/: project.pbxproj
shaders/: basic.frag  basic.vert  blit_debug.frag  clip_position.vert  debug_point.frag  debug_point.vert  deferred_composition.frag  deferred_lighting.frag  deferred_lighting_directional.frag  deferred_lighting_point.frag  distance.frag  empty.frag  envmap_visualizer.frag  exposure_extract_bright.frag  fullscreen_triangle.vert  gamma_correct.frag  gaussian_horizontal.frag  gaussian_vertical.frag  geometry.frag  geometry.vert  geometry_basic.frag  geometry_basic.vert  gltf_vertex_out_material_params.glsl  grass.comp  grass.frag  grass.tesc  grass.tese  grass.vert  lighting_common.glsl  position_only.vert  post_processing.frag  quad.frag  quad.vert  ray_chit.rchit  ray_chit2.rchit  ray_gen.rgen  ray_miss.rmiss  ray_miss2.rmiss  rendertargets.glsl  scene_common.glsl  (+20 more)
src/: Aszelea.cpp  BSDF.cpp  BSDF.hpp  Blade.cpp  Blade.hpp  Camera.cpp  Camera.hpp  Cube.cpp  Cube.hpp  Drawable.cpp  Drawable.hpp  Ellyn.cpp  GameObject.cpp  GameObject.hpp  Globals.cpp  Globals.hpp  GrassField.cpp  GrassField.hpp  Input.cpp  Input.hpp  Light.cpp  Light.hpp  Makefile  Materials.cpp  Materials.hpp  Mesh.cpp  Mesh.hpp  Pathtracer.cpp  Pathtracer.hpp  Pathtracer.inl  Program+Game.cpp  Program.cpp  Program.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Triangle.cpp  (+14 more)
(+599 files in other folders)
